--- a/aula24/css/style.css
+++ b/aula24/css/style.css
@@ -23,6 +23,20 @@ a {
   font-size: 1.2rem;
   font-family: var(--font-padrao);
   color: var(--cor-padrao-fonte);
+
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+a.go:hover {
+  background-color: #e53935;
+  color: white;
+  transition: 2s;
+}
+.icons-list {
+  margin-right: 2px;
+  font-size: 1.5rem;
 }
 
 header,
@@ -56,14 +70,24 @@ header#top-header h1 {
   align-items: center;
 }
 
-header#top-header nav ul {
+header#top-header nav#menu ul#list-menu {
   width: 100%;
-  background-color: crimson;
   justify-content: flex-end;
 }
 
-nav ul li {
-  width: 120px;
+nav#menu ul#list-menu li.item {
+  width: 130px;
   justify-content: center;
   align-items: center;
+}
+
+section#section-cards {
+  width: 100%;
+  height: auto;
+  background-color: darkcyan;
+}
+section#section-cards div.card {
+  width: 320px;
+  height: 400px;
+  border: 1px solid red;
 }
