--- a/aula24/css/style.css
+++ b/aula24/css/style.css
@@ -83,11 +83,41 @@ nav#menu ul#list-menu li.item {
 
 section#section-cards {
   width: 100%;
-  height: auto;
-  background-color: darkcyan;
+  margin-top: 20px;
 }
 section#section-cards div.card {
   width: 320px;
   height: 400px;
   border: 1px solid red;
+}
+
+section#section-cards div.card figure.card-img-pizza {
+  width: 100%;
+  padding: 2px;
+}
+
+section#section-cards div.card figure.card-img-pizza img.img-pizza {
+  width: 100%;
+}
+
+section div form.formTamanhoPizza {
+  align-items: center;
+  justify-content: center;
+}
+
+section div form.formTamanhoPizza label {
+  width: 30px;
+  font-size: 14px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  flex-direction: column;
+  align-items: center;
+  padding: 2px;
+  cursor: pointer;
+}
+
+h2.sub-titulo-pizza {
+  font-size: 1.2rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  padding: 10px 0 10px 0;
 }
