--- a/aula24/css/style.css
+++ b/aula24/css/style.css
@@ -15,7 +15,8 @@
   font-size: 100%;
   --cor-border-geral: #cfd8dc;
   --cor-padrao-fonte: #434f55;
-  --font-padrao: verdana, arial;
+  --font-padrao: Poppins, sans-serif;
+
   --font-cor-titulo: #e53935;
 }
 a {
@@ -65,8 +66,8 @@ header#top-header nav {
 
 header#top-header h1 {
   color: #e53935;
-  font-family: var(--font-padrao);
-  font-size: 2.2rem;
+  font-family: Poppins, sans-serif;
+  font-size: clamp(2.2rem, 3.2vh, 3.3rem);
   align-items: center;
 }
 
@@ -84,11 +85,15 @@ nav#menu ul#list-menu li.item {
 section#section-cards {
   width: 100%;
   margin-top: 20px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  gap: 20px;
 }
 section#section-cards div.card {
   width: 320px;
-  height: 400px;
-  border: 1px solid red;
+  flex-grow: 1;
+  border: 1px solid #434f55;
 }
 
 section#section-cards div.card figure.card-img-pizza {
@@ -120,4 +125,13 @@ h2.sub-titulo-pizza {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   padding: 10px 0 10px 0;
+}
+
+footer {
+  height: 60px;
+  border-top: 1px solid #434f55;
+  margin-top: 10px;
+  background-color: #2e7d32;
+  text-align: center;
+  justify-content: center;
 }
